# rexml

./: Cargo.toml  README.md
benches/: parser.rs  read.rs
spec/: empty_element.xml
src/: events.rs  lib.rs  reader.rs  types.rs  writer.rs
src/reader/: attr.rs  chardata.rs  doctype.rs  el.rs  element.rs  errors.rs  events.rs  lexer.rs  misc.rs  mod.rs  name.rs  pi.rs  reader.rs  utils.rs  xmldecl.rs
tests/: spec.rs
