[package]
description = "A pure rust xml implementation, based-on event stream api."
documentation = "https://docs.rs/rexml"
edition = "2024"
license = "MIT"
name = "rexml"
repository = "https://github.com/styles-lab/rexml"
version = "0.1.0"

[dependencies]
log = {version = "^0.4"}
memchr = "^2.7"
parserc = {version = "^0.4"}
thiserror = "^2"
[dev-dependencies]
divan = {version = "^0.1"}
pretty_env_logger = {version = "^0.5"}
quick-xml = "0.37.2"
serde_json = {version = "^1"}
xml_dom = "0.2.8"

[features]
default = ["reader", "writer"]
reader = []
writer = []

[[bench]]
harness = false
name = "read"

[[bench]]
harness = false
name = "parser"
